# pythonocc-builder

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  build_3rdparty.py  build_3rdparty_windows.ps1  build_wheels.py  check_cmake_python.py  create_wheel.py  index.html  local_build.sh  pyproject.toml
.github/workflows/: build_and_deploy.yml
build_wheel_cp311/OCC/Core/: Adaptor2d.py  Adaptor3d.py  Addons.py  AdvApp2Var.py  AppBlend.py  Aspect.py  BOPDS.py  BRep.py  BRepAlgo.py  BRepBlend.py  BRepClass3d.py  BRepExtrema.py  BRepFeat.py  BRepFill.py  BRepIntCurveSurface.py  BRepLProp.py  BRepMeshData.py  BRepPrimAPI.py  BRepTopAdaptor.py  BiTgte.py  BinMDF.py  BinMFunction.py  BinObjMgt.py  BinXCAFDrivers.py  BlendFunc.py  CDF.py  CDM.py  CSLib.py  ChFiDS.py  Contap.py  DEBRepCascade.py  ElCLib.py  ElSLib.py  FEmTool.py  FilletSurf.py  GCE2d.py  GProp.py  GccAna.py  Geom.py  Geom2dAPI.py  (+79 more)
build_wheel_cp311/pythonocc_core-7.9.0.dist-info/: METADATA  WHEEL
build_wheel_cp312/OCC/Core/: AIS.py  AppCont.py  AppStd.py  AppStdL.py  ApproxInt.py  BOPAlgo.py  BOPTools.py  BRepAdaptor.py  BRepBndLib.py  BRepBuilderAPI.py  BRepClass.py  BRepGProp.py  BRepMesh.py  BRepOffset.py  BRepOffsetAPI.py  BRepPrim.py  BRepSweep.py  BSplCLib.py  BSplSLib.py  BVH.py  BinDrivers.py  BinLDrivers.py  BinMDataStd.py  BinMDocStd.py  BinMNaming.py  BinMXCAFDoc.py  BinTools.py  Bisector.py  Blend.py  Bnd.py  CPnts.py  ChFi3d.py  ChFiKPart.py  (+71 more)
build_wheel_cp312/pythonocc_core-7.9.0.dist-info/: WHEEL
build_wheel_cp313/pythonocc_core-7.9.0.dist-info/: WHEEL
pythonocc-core/: index.html
(+89 files in other folders)
